Added settings button, does not do anything yet.

--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,7 @@
 </div>
 
 <div class="buttons">
+  <div class="button date-picker"><i class="icon-calendar"></i> Start date</div>
   <div class="button reload" title="Reload "><i class="icon-spinner"></i> Reload</div>
-  <div class="button date-picker"><i class="icon-calendar"></i> Choose starting date</div>
+  <div class="button settings" title="Settings"><i class="icon-cog"></i> Settings</div>
 </div>
