#3 Used list of holidays can now be selected from settings.

--- a/src/template.html
+++ b/src/template.html
@@ -26,6 +26,11 @@
     </div>
 
     <div class="setting">
+      <label>Change holidays list</label>
+      {holidayLists}
+    </div>
+
+    <div class="setting">
       <div class="button reload" title="Clear local storage and reload monthly balances from Harvest."><i class="icon-spinner"></i> Reset all data</div>
     </div>
 
