Don't allow users to select starting dates from future

--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="date-input" style="display: none;">
-    <input type="date" min="{firstDayOfPreviousYear}" value="{calendarStart}">
+    <input type="date" min="{firstDayOfPreviousYear}" max="{maxDate}" value="{calendarStart}">
   </div>
 
   <div class="buttons">
