Implement kiky calculation.

--- a/app/main-panel.html
+++ b/app/main-panel.html
@@ -1,5 +1,6 @@
 <div class="current-balance">
   Current hour balance from {{startDate}} to today: <strong>{{balance}}</strong> hours.
+  Excluded KiKy hours for {{currentYear}}: <strong>{{kikyBalance}}/{{kikyHours}}</strong>
 </div>
 
 <div class="buttons">
