--- a/app/settings-panel.html
+++ b/app/settings-panel.html
@@ -33,6 +33,19 @@
   </div>
 
   <div class="setting">
+    <label>Change KiKy task id</label>
+    <p>
+      Requires recalculation - click "Reset all data"-button below.
+    </p>
+    <input type="text" class="kiky-task" name="kiky-task" value="{{kikyTask}}">
+  </div>
+
+  <div class="setting">
+    <label>Change required KiKy hours per year</label>
+    <input type="text" class="kiky-hours" name="kiky-hours" value="{{kikyHours}}">
+  </div>
+
+  <div class="setting">
     <label>Paid overtime</label>
     <p>These entries will be deducted from the total hour balance.</p>
 
