Fix button classes. Show dialog when clearing data. Show balance in day view also.

--- a/app/main-panel.html
+++ b/app/main-panel.html
@@ -4,5 +4,5 @@
 </div>
 
 <div class="buttons">
-  <div class="button settings" title="Settings"><i class="icon-cog"></i> Settings</div>
+  <div class="hui-button settings" title="Settings"><i class="icon-cog"></i> Settings</div>
 </div>
