--- a/app/settings-panel.html
+++ b/app/settings-panel.html
@@ -1,5 +1,5 @@
 <h1>Harvest Balance settings</h1>
-<div class="button close-settings">Close</div>
+<div class="hui-button close-settings">Close</div>
 
 <div class="balance-settings-container">
 
@@ -73,7 +73,7 @@
       <strong class="add-new-entry">Add new paid overtime</strong>
       <input type="month" class="new-paid-overtime-month" name="new-paid-overtime-month" value="" placeholder="Month">
       <input type="text" class="new-paid-overtime-value" name="new-paid-overtime-value" value="" placeholder="Hours">
-      <button class="button add-paid-overtime" disabled>Add</button>
+      <button class="hui-button add-paid-overtime" disabled>Add</button>
     </div>
   </div>
 
@@ -82,7 +82,7 @@
     <p>
       Removes all cached hours and forces reloading them from Harvest. Won't touch your settings or paid overtime entries.
     </p>
-    <div class="button reload" title="Clear local storage and reload monthly balances from Harvest."><i class="icon-spinner"></i> Reset all data</div>
+    <div class="hui-button reload" title="Clear local storage and reload monthly balances from Harvest."><i class="icon-spinner"></i> Reset all data</div>
   </div>
 
 </div>
