--- a/app/settings-panel.html
+++ b/app/settings-panel.html
@@ -10,6 +10,12 @@
   </div>
 
   <div class="setting">
+    <label for="monday-length-range">Change Monday length</label>
+    <input class="monday-length-range" type="range" min="0.5" max="12" step="0.5" value="{{mondayLength}}">
+    <output class="monday-length">{{mondayLength}} hours</output>
+  </div>
+
+  <div class="setting">
     <label>Change holidays list</label>
     <select class="holiday-lists">
     {{#holidayLists}}
